# todo-app

app/backend/: pyproject.toml
app/backend/api/cruds/: task.py
app/backend/api/libs/: authenticate.py
backend/api/: db.py  main.py  migrate_db.py
backend/api/cruds/: user.py
backend/api/models/: model.py
backend/api/routers/: task.py  user.py
backend/api/schema/: task.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  schema.ts
frontend/src/components/: InputForm.tsx  List.tsx  ListItem.tsx
frontend/src/lib/: APIHelper.ts
