[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["HirotoOsaka <ipocchi129@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
sqlalchemy = "^2.0.27"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.2"
pathlib = "^1.0.1"
jose = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
